prevent default keyboard open on mobile

--- a/src/components/img-signature/style.scss
+++ b/src/components/img-signature/style.scss
@@ -36,7 +36,7 @@
         // background-color: pink;
         .control-header {
           background-color: goldenrod;
-          height: 94px;
+          height: 110px;
         }
        .tui-image-editor-container{
          border: 1px solid #000;
